--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "hsmfawaz/payment-gateways",
+    "description": "this laravel package manage the payment process of many payment gateway providers",
     "keywords": [
-        ":vendor_name",
+        "hsmfawaz",
         "laravel",
-        ":package_slug"
+        "payment-gateways"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/hsmfawaz/payment-gateways",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "hisham fawaz",
+            "email": "hsm.fawaz@gmail.com",
             "role": "Developer"
         }
     ],
@@ -30,18 +30,17 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Hsmfawaz\\PaymentGateways\\": "src",
+            "Hsmfawaz\\PaymentGateways\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Hsmfawaz\\PaymentGateways\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -61,10 +60,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Hsmfawaz\\PaymentGateways\\PaymentGatewaysServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "PaymentGateways": "Hsmfawaz\\PaymentGateways\\Facades\\PaymentGateways"
             }
         }
     },
