--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.13.0",
-        "illuminate/contracts": "^9.0"
+        "illuminate/contracts": "^9.0",
+        "guzzlehttp/guzzle": "^7.5.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
@@ -63,7 +64,7 @@
                 "Hsmfawaz\\PaymentGateways\\PaymentGatewaysServiceProvider"
             ],
             "aliases": {
-                "PaymentGateways": "Hsmfawaz\\PaymentGateways\\Facades\\PaymentGateways"
+                "PaymentGateways": "PaymentGatewaysFacade"
             }
         }
     },
