--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -36,4 +36,9 @@
     <logging>
         <junit outputFile="build/report.junit.xml"/>
     </logging>
+    <php>
+        <env name="PAYMENT_FAWRY_LIVE" value="0"/>
+        <env name="PAYMENT_FAWRY_MERCHANT_CODE" value="1tSa6uxz2nTwlaAmt38enA=="/>
+        <env name="PAYMENT_FAWRY_SECURITY_KEY" value="259af31fc2f74453b3a55739b21ae9ef"/>
+    </php>
 </phpunit>
