--- a/composer.json
+++ b/composer.json
@@ -1,73 +1,76 @@
 {
-    "name": "hsmfawaz/payment-gateways",
-    "description": "this laravel package manage the payment process of many payment gateway providers",
-    "keywords": [
-        "hsmfawaz",
-        "laravel",
-        "payment-gateways"
+  "name": "hsmfawaz/payment-gateways",
+  "description": "this laravel package manage the payment process of many payment gateway providers",
+  "keywords": [
+    "hsmfawaz",
+    "laravel",
+    "payment-gateways"
+  ],
+  "homepage": "https://github.com/hsmfawaz/payment-gateways",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "hisham fawaz",
+      "email": "hsm.fawaz@gmail.com",
+      "role": "Developer"
+    }
+  ],
+  "require": {
+    "php": "^8.0",
+    "spatie/laravel-package-tools": "^1.13.0",
+    "illuminate/contracts": "^9.0",
+    "guzzlehttp/guzzle": "^7.5.0"
+  },
+  "require-dev": {
+    "laravel/pint": "^1.0",
+    "nunomaduro/collision": "^6.0",
+    "nunomaduro/larastan": "^2.0.1",
+    "orchestra/testbench": "^7.0",
+    "pestphp/pest": "^1.21",
+    "pestphp/pest-plugin-laravel": "^1.1",
+    "phpstan/extension-installer": "^1.1",
+    "phpstan/phpstan-deprecation-rules": "^1.0",
+    "phpstan/phpstan-phpunit": "^1.0",
+    "phpunit/phpunit": "^9.5"
+  },
+  "autoload": {
+    "files": [
+      "src/helpers.php"
     ],
-    "homepage": "https://github.com/hsmfawaz/payment-gateways",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "hisham fawaz",
-            "email": "hsm.fawaz@gmail.com",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": "^8.0",
-        "spatie/laravel-package-tools": "^1.13.0",
-        "illuminate/contracts": "^9.0",
-        "guzzlehttp/guzzle": "^7.5.0"
-    },
-    "require-dev": {
-        "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^6.0",
-        "nunomaduro/larastan": "^2.0.1",
-        "orchestra/testbench": "^7.0",
-        "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.1",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Hsmfawaz\\PaymentGateways\\": "src",
-            "Hsmfawaz\\PaymentGateways\\Database\\Factories\\": "database/factories"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Hsmfawaz\\PaymentGateways\\Tests\\": "tests"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
-        "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/pint"
-    },
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Hsmfawaz\\PaymentGateways\\PaymentGatewaysServiceProvider"
-            ],
-            "aliases": {
-                "PaymentGateways": "PaymentGatewaysFacade"
-            }
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "psr-4": {
+      "Hsmfawaz\\PaymentGateways\\": "src",
+      "Hsmfawaz\\PaymentGateways\\Database\\Factories\\": "database/factories"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Hsmfawaz\\PaymentGateways\\Tests\\": "tests"
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
+    "analyse": "vendor/bin/phpstan analyse",
+    "test": "vendor/bin/pest",
+    "test-coverage": "vendor/bin/pest --coverage",
+    "format": "vendor/bin/pint"
+  },
+  "config": {
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "phpstan/extension-installer": true
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Hsmfawaz\\PaymentGateways\\PaymentGatewaysServiceProvider"
+      ],
+      "aliases": {
+        "PaymentGateways": "PaymentGatewaysFacade"
+      }
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
