--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,10 @@
   ],
   "require": {
     "php": "^8.0",
-    "spatie/laravel-package-tools": "^1.13.0",
+    "guzzlehttp/guzzle": "^7.5.0",
     "illuminate/contracts": "^10.0",
-    "guzzlehttp/guzzle": "^7.5.0"
+    "spatie/laravel-package-tools": "^1.13.0",
+    "stripe/stripe-php": "^13.5"
   },
   "require-dev": {
     "laravel/pint": "^1.0",
