--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PAYMENT_FAWRY_MERCHANT_CODE=1tSa6uxz2nTwlaAmt38enA==
 PAYMENT_FAWRY_SECURITY_KEY=259af31fc2f74453b3a55739b21ae9ef
+
+PAYMENT_TAMARA_LIVE=0
+PAYMENT_TAMARA_SECURITY_KEY=
